src/assets/css/home.scss
/* ... */
.home > section.current-team {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 60px;

  @include media.md {
    gap: 120px;
  }

  h2 {
    color: #f1de00;
  }

  ul {
    color: #f7f7f7;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    max-width: 100%;
    list-style: none;
    gap: 20px;

    @include media.md {
      gap: 40px;
    }

    li {
      display: block;
      text-align: center;

      img {
        border-radius: 50%;
        object-fit: cover;
        width: 170px;
        height: 170px;
      }

      h3 {
        font-weight: bold;
      }
    }
  }
}

.home > section.latest-news {
  h2 {
    color: #f1de00;
  }

  .post-list {
    margin: 80px auto;
  }

  .button-group {
    margin: 0 auto;
  }
}

